--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -15,9 +15,11 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/NameEditText"
+        android:layout_marginTop="67dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp" />
+        android:editable="true"
+        android:enabled="true" />
 
     <Button
         android:layout_width="wrap_content"
