--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,14 +13,17 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|text"
         android:ems="10"
         android:id="@+id/NameEditText"
         android:layout_marginTop="67dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:editable="true"
-        android:enabled="true" />
+        android:enabled="true"
+        android:textIsSelectable="false"
+        android:singleLine="false"
+        android:selectAllOnFocus="false" />
 
     <Button
         android:layout_width="wrap_content"
@@ -28,4 +32,17 @@
         android:id="@+id/SaveButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="BMI"
+        android:id="@+id/BMIView"
+        android:layout_marginBottom="73dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/SaveButton"
+        android:layout_toStartOf="@+id/SaveButton" />
+
+
 </RelativeLayout>
