--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -55,19 +55,8 @@
         android:layout_below="@+id/NameEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="52dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/AgeNumber"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
+        android:layout_marginTop="52dp"
+        android:editable="false" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -96,10 +85,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Weight"
         android:id="@+id/textView5"
-        android:layout_below="@+id/AgeNumber"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="69dp" />
+        android:layout_marginTop="69dp"
+        android:layout_below="@+id/textView3" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -114,28 +103,16 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/WeightNumber"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/HeightNumber"
-        android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
         android:ems="10"
         android:id="@+id/HeightNumber"
         android:layout_below="@+id/textView6"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/AgeNumber"
         android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2" />
+        android:layout_alignStart="@+id/textView2"
+        android:editable="true"
+        android:enabled="true"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -145,19 +122,22 @@
         android:layout_below="@+id/BMRText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/WeightNumber"
-        android:layout_alignEnd="@+id/WeightNumber"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:inputType="text"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
         android:id="@+id/BMRNumber"
-        android:layout_below="@+id/BMRText"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:inputType="text"
+        android:layout_alignTop="@+id/BMINumber"
+        android:layout_alignLeft="@+id/seekBar"
+        android:layout_alignStart="@+id/seekBar" />
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -186,6 +166,31 @@
         android:layout_toLeftOf="@+id/textView9"
         android:layout_toStartOf="@+id/textView9"
         android:visibility="gone" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/AgeNumber"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:inputType="number"
+        android:enabled="true"
+        android:editable="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/WeightNumber"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5" />
 
 
 </RelativeLayout>
