--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -8,5 +8,5 @@
     <item
         android:id="@+id/action_edit"
         android:title="Edit"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
